<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.ajdeveloppement.concours</groupId>
	<artifactId>ArcCompetition</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ArcCompetition</name>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>apt-maven-plugin</artifactId>
				<version>1.0-alpha-5</version>
				<configuration>
					<factory>org.ajdeveloppement.commons.persistence.sql.processor.QueryableProcessor</factory>
				</configuration>
				 <dependencies>
		           <dependency>
		             <groupId>org.ajdeveloppement</groupId>
		             <artifactId>ajcommons</artifactId>
		             <version>2.0.0-SNAPSHOT</version>
		           </dependency>
		         </dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.ajdeveloppement</groupId>
			<artifactId>ajcommons</artifactId>
		</dependency>
		<dependency>
			<groupId>org.ajdeveloppement</groupId>
			<artifactId>ajcommons-ext</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.ajdeveloppement</groupId>
			<artifactId>ajcommons-webserver</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.174</version>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.ajdeveloppement</groupId>
				<artifactId>ajcommons</artifactId>
				<version>2.0.0-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>